# Anatoole

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt
app-imgui/: CMakeLists.txt  main.cpp
app/include/: version.h
app/src/: main.cpp
backend/: CMakeLists.txt
backend/controller/: CMakeLists.txt
backend/controller/include/: BaseComponent.h  Controller.h  EventType.h  Mediator.h
backend/controller/src/: Controller.cpp
backend/logger/: CMakeLists.txt
backend/logger/include/: Logger.h
backend/logger/src/: Logger.cpp
backend/parser/: CMakeLists.txt
backend/parser/include/: CollationParser.h  FileBase.h  Parser.h  ParserBase.h  ProtocolModel.h  ProtocolParser.h
backend/parser/src/: CollationParser.cpp  Parser.cpp  ProtocolParser.cpp
backend/settings/: CMakeLists.txt
backend/settings/include/: Settings.h
cmake/: version.h.in
core/: CMakeLists.txt
core/analyzer/: CMakeLists.txt
core/analyzer/include/: Analyzer.h  Problem.h
core/analyzer/src/: Analyzer.cpp
core/controller/: CMakeLists.txt
core/controller/include/: ColumnsSettings.h  Controller.h
core/controller/src/: Controller.cpp
core/logger/: CMakeLists.txt
core/logger/include/: ConsoleLogger.h  Logger.h
core/logger/src/: Logger.cpp
core/parser/: CMakeLists.txt
core/parser/include/: CSVParser.h  CollationParser.h  ParserBase.h  ProtocolParser.h
core/parser/src/: CollationParser.cpp  ProtocolParser.cpp
docker/: Dockerfile
gui/: CMakeLists.txt
gui-imgui/: CMakeLists.txt
gui-imgui/include/: Gui.h  LoggerWindow.h
gui-imgui/src/: Gui.cpp  LoggerWindow.cpp
gui/include/: LogConsoleWidget.h  MainWindow.h  PathsWidget.h  SettingsWidget.h
gui/src/: LogConsoleWidget.cpp  MainWindow.cpp  PathsWidget.cpp  SettingsWidget.cpp
gui/ui/: LogConsoleWidget.ui  MainWindow.ui  PathsWidget.ui  SettingsWidget.ui
test/: CMakeLists.txt
test/core/: CMakeLists.txt  TestParser.cpp
test/core/analyzer/: CMakeLists.txt  TestAnalyzer.cpp
test/core/parser/: CMakeLists.txt  TestCollationParser.cpp  TestProtocolParser.cpp
test/test_files/: CMakeLists.txt  fully_correct_collation.csv  fully_correct_protocol.csv  missing_line_collation.csv  missing_line_protocol.csv
utils/: CMakeLists.txt
utils/include/: Utils.h
